tests/characterization/snapshots/characterization__lifecycle__backend_restart_help.snap
---
source: tests/characterization/lifecycle.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend restart <core|sse_engine|mitigator|estimator|combiner|tranqu|gateway|all>
--- stderr ---
--- end ---
