tests/characterization/snapshots/characterization__lifecycle__backend_restart_missing_target.snap
---
source: tests/characterization/lifecycle.rs
expression: context.render_output(&output)
---
exit: 1
--- stdout ---
Usage:
  oqtopus backend restart <core|sse_engine|mitigator|estimator|combiner|tranqu|gateway|all>
--- stderr ---
--- end ---
