tests/characterization/snapshots/characterization__lifecycle__backend_start_help.snap
---
source: tests/characterization/lifecycle.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
Usage:
  oqtopus backend start <core|sse_engine|mitigator|estimator|combiner|tranqu|gateway|all>
  oqtopus backend start <core|sse_engine|mitigator|estimator|combiner|tranqu|gateway> --foreground
--- stderr ---
--- end ---
