tests/characterization/snapshots/characterization__lifecycle__backend_stop_absent.snap
---
source: tests/characterization/lifecycle.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
core: Stopped
--- stderr ---
--- end ---
