tests/characterization/snapshots/characterization__lifecycle__cloud_local_restart_help.snap
---
source: tests/characterization/lifecycle.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
Usage:
  oqtopus cloud-local restart <db|user|provider|admin|user_signup|worker|all>
--- stderr ---
--- end ---
